--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 * {
   font-family: sans-serif;
 }
+body {
+  min-height: 100vh;
+}
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .bar-chart {
-  margin-top: 40px;
+  margin-top: 5vh;
   background-color: #eee;
   padding: 50px 20px 30px 20px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
@@ -86,4 +89,42 @@ rect:hover {
     #d36756 51%,
     #8f5a34 100%
   );
+}
+footer {
+  width: 100%;
+  color: #8c8c8c;
+
+  margin: auto;
+  margin-top: 5vh;
+}
+
+footer p {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+footer .footer-text {
+  margin: auto;
+}
+
+footer .love {
+  color: red;
+}
+footer a {
+  color: #2e2e2e;
+}
+.sound {
+  text-align: right;
+}
+.sound a {
+  background: rgb(165, 115, 115);
+  padding: 5px;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  text-decoration: none;
+}
+.line-through {
+  text-decoration: line-through !important;
 }
